fixed some of the alignment issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -352,7 +352,7 @@ h3 {
 	height: 300px;
 }
 .experience h4{
-	padding-left: 3em;
+	padding-left: 2.2em;
 	font-size: 40pt;
 	color: black;
 	display: inline;
